updated about me

--- a/about.html
+++ b/about.html
@@ -16,16 +16,16 @@
         </head>
         <body id="page-top">
             <div class="bar"> </div>
-            <div style="background: #000000; padding-top: 10%;">
+            <div style="background: #000000; padding-top: 7%;">
                 <section class="bg-black">
                     <div class="container-fluid" data-aos="zoom-out" data-aos-duration="1000" style="padding-left: 5%; padding-right: 5%;">
                         <div class="row">
                             <div class="col-md-12 col-lg-6">
-                                <p style="padding-left: 15px;padding-right: 15px;">Isa's is ......</p>
+                                <p style="padding-left: 15px;padding-right: 15px;">Isa Biramontes is an aspiring Wearable Technology Developer based in New York, NY. Currently attending Fabricademy in Montreal, they have a general background in fashion, textiles, coding, and interdisciplinary design.</p>
                                 <hr>
                                 <p style="padding-left: 15px;padding-right: 15px;">Isa's pronouns are they/them/she/hers</p>
                                 <hr>
-                                <p style="padding-left: 15px;padding-right: 15px;">Isa's is ......</p>
+                                <p style="padding-left: 15px;padding-right: 15px;">Isa is available to work</p>
                                 <hr>
                                 <div style="text-align:center"> </div>
                             </div>
@@ -41,27 +41,27 @@
                                             <div class="form-group"><input class="form-control" type="text" name="last_name" placeholder="Last" required></div>
                                         </div>
                                     </div>
-                                    <hr>
                                     <p class="required">Pronouns</p>
                                     <div class="form-group"><input class="form-control" type="text" name="pronouns" required></div>
-                                    <hr>
                                     <p>Subject</p>
                                     <div class="form-group"><input class="form-control" type="text" name="subject"></div>
-                                    <hr>
                                     <p class="required">Email</p>
                                     <div class="form-group"><input class="form-control" type="email" name="email_address" required></div>
-                                    <hr>
                                     <p class="required">Message</p>
-                                    <div class="form-group"><textarea class="form-control" type="text" name="message" rows="14"></textarea></div>
-                                    <hr>
-                                    <div class="form-group"><button type="submit"> Send </button></div>
-                                    <style>
-                                        .required:after {
-                                          content:" *";
-                                          color: #d8ff33;
-                                        }
-                                    </style>
+                                    <div class="form-group"><textarea class="form-control" type="text" name="message" rows="8"></textarea></div>
+                                    <div class="form-group"><button type="submit"> Send </button></div>  
                                 </form>
+                                <p>This form is for PROFESSIONAL INQUIRIES ONLY </p>
+                                <p>For personal inquiries, contact me on social media. </p>
+                                <style>
+                                    #hidden{
+                                        color:black;
+                                    }
+                                    .required:after {
+                                      content:" *";
+                                      color: #d8ff33;
+                                    }
+                                </style>
                             </div>
                         </div>
                     </div>
