--- a/artist.html
+++ b/artist.html
@@ -28,10 +28,10 @@
                         <li>
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3>2021</h3>
+                              <h3>2020</h3>
                             </div>
                             <div class="timeline-body">
-                                <p class="captions">text</p>
+                                <p>Jackie Isa</p>
                               <hr>
                               <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -40,10 +40,10 @@
                         <li class="timeline-inverted">
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3>2020</h3>
+                              <h3>2019</h3>
                             </div>
                             <div class="timeline-body">
-                                <p class="captions">text</p>
+                                <p>Text</p>
                               <hr>
                               <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -52,26 +52,15 @@
                         <li>
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3>2019</h3>
+                              <h3>2018</h3>
                               <p>test</p>
                             </div>
                             <div class="timeline-body">
-                                <p class="captions">text</p>
+                                <p>text</p>
                               <hr>
                               <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
                           </div>
-                        </li>
-                        <li class="timeline-inverted">
-                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="timeline-heading">
-                              <h3>2018</h3>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="captions">text</p>
-                              <hr>
-                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
-                            </div>
                         </li>
                       </ul>
                     </div>
