--- a/designer.html
+++ b/designer.html
@@ -27,7 +27,7 @@
                               <p> test text</p>
                             </div>
                             <div class="timeline-body">
-							  <p class="captions">Designing for final project</p>
+							  <p >Designing for final project</p>
                             </div>
                           </div>
                         </li>
@@ -37,13 +37,13 @@
                               <h3>2020</h3>
                             </div>
                             <div class="timeline-body">
-								<p class="captions">3D Design</p>
-								<p class="captions">Biodesign</p>
-								<p class="captions">etc</p>
-								<p class="captions">etc</p>
-								<p class="captions">etc</p>
-								<p class="captions">etc</p>
-								<p class="captions">Biodesign</p>
+								<p >3D Design</p>
+								<p >Biodesign</p>
+								<p >etc</p>
+								<p >etc</p>
+								<p >etc</p>
+								<p >etc</p>
+								<p >Biodesign</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -56,8 +56,8 @@
                               <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Textile Designer</p>
-                              <p class="captions">1st wearable</p>
+                              <p >Textile Designer</p>
+                              <p >1st wearable</p>
                             </div>
                           </div>
                         </li>
@@ -67,8 +67,8 @@
                               <h3>2018</h3>
                             </div>
                             <div class="timeline-body">
-							  <p class="captions"> HSFI</p>
-							  <p class="captions"> Awarded</p>
+							  <p > HSFI</p>
+							  <p > Awarded</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -81,7 +81,7 @@
                               <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions"> HSFI </p>
+                              <p > HSFI </p>
                             </div>
                           </div>
                         </li>
