--- a/developer.html
+++ b/developer.html
@@ -27,9 +27,9 @@
                               <br>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Final project</p>
-                              <p class="captions">Documentation for school</p>
-                              <p class="captions">This portfolio</p>
+                              <p >Final project</p>
+                              <p >Documentation for school</p>
+                              <p >This portfolio</p>
                             </div>
                           </div>
                         </li>
@@ -39,7 +39,7 @@
                               <h3>2020</h3>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Former portfolio</p>
+                              <p>Former portfolio</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -52,9 +52,9 @@
                               <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Etsy</p>
-                              <p class="captions">Google</p>
-                              <p class="captions">1st wearable</p>
+                              <p>Etsy</p>
+                              <p>Google</p>
+                              <p>1st wearable</p>
                             </div>
                           </div>
                         </li>
@@ -64,7 +64,7 @@
                               <h3>2018</h3>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions"> CN @ Oscar Health</p>
+                              <p> CN @ Oscar Health</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -77,8 +77,8 @@
                               <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions"> First learned how to program</p>
-                              <p class="captions"> Awarded</p>
+                              <p> First learned how to program</p>
+                              <p> Awarded</p>
                             </div>
                           </div>
                         </li>
