--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,12 @@
             <a href="https://www.instagram.com/isa.s_wearables/" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
             <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-linkedin"></i></a>
         </div>
-        <p class="copyright">Isa Biramontes © 2021</p>
+        <p id="footerText" class="copyright">Isa Biramontes © 2021</p>
+        <style>
+            #footerText {
+                font-family: commuters-sans,sans-serif;
+                font-style: italic;
+            }
+        </style>
     </footer>
 </div>
