--- a/test.html
+++ b/test.html
@@ -1,3 +1,6 @@
 <div class="overlay_content">
     <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
 </div>
+<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+    <path fill="#D8FF33" d="M40.6,-42.1C52.4,-38.5,61.6,-25.5,66.8,-9.7C72,6,73.2,24.5,63.4,32C53.6,39.5,32.7,36,16.1,40.4C-0.5,44.7,-12.8,56.9,-18.8,53.7C-24.7,50.6,-24.3,32.2,-34,18.3C-43.6,4.3,-63.3,-5.1,-69,-19C-74.7,-32.9,-66.5,-51.1,-52.6,-54.4C-38.8,-57.8,-19.4,-46.1,-2.5,-43.2C14.4,-40.2,28.8,-45.8,40.6,-42.1Z" transform="translate(100 100)" />
+</svg>
