--- a/designer.html
+++ b/designer.html
@@ -9,7 +9,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-            <link rel="stylesheet" href="css/Footer-Basic.css">
+            <link rel="stylesheet" href="css/footer.css">
             <link rel="stylesheet" href="css/timeline.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
