completed thank you and error

--- a/error_message.html
+++ b/error_message.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
-<title>Error</title>	
+    <html>
+        <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+            <title>Error</title>
+            <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+            <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
+            <link rel="preconnect" href="https://fonts.gstatic.com"> 
+            <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="css/custom.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+        </head>
+        <body style="background-color: #000000; display: flex; align-items: center; " data-aos="zoom-out" data-aos-duration="1000">
+                <div class="container my-auto text-center">
+                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;"><em>OOPS!</em></h2>
+                    <p >Please ensure you have completed all fields before submitting the form. </p>
+                    <p>Also ensure that there is only one email address.</p>
+                    <h1 style="font-size: 20px;"><a href="JavaScript:history.go(-1);">Back</a></h1>
+                </div>
+            <script src="js/jquery.min.js"></script>
+            <script src="bootstrap/js/bootstrap.min.js"></script>
+            <script src="js/bs-init.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        </body>
+    </html>
 
-<h1>Oops!</h1>
-<p>Please ensure you have completed all fields before submitting the form. </p>
-<p>Also ensure that there is only one email address.</p>
-<p><a href="JavaScript:history.go(-1);">Back</a></p>
+
