--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="bar"> </div>
             <header id="mainHeader" class="d-flex masthead" data-aos="zoom-out" data-aos-duration="1000" style="background: url(&quot;img/cover.png&quot;), #000000">
                 <div id="mainText" class="container my-auto text-center">
-                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;"">ISA BIRAMONTES</em></h2>
+                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;">ISA BIRAMONTES</em></h2>
                     <h3 class="text-center masthead-subheading mb-0" style="color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
                     <div class="overlay"></div>
                 </div>
