--- a/thank_you.html
+++ b/thank_you.html
@@ -3,29 +3,25 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-            <title>Thank You</title>
+            <title>Thank You!</title>
             <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-            <link rel="stylesheet" href="css/footer.css">
             <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
-        <body id="page-top">
-            <div class="bar"> </div>
-            <h1>Thank you for your inquiry</h1>
-            <p>Your information and message has been sent to me.</p>
-            <p><a href="about.html"> Return to about me </a>.</p>
-            <p><a href="index.html"> Return to home </a>.</p>
-            <div class="footer"></div>
+        <body style="background-color: #000000; display: flex; align-items: center; " data-aos="zoom-out" data-aos-duration="1000">
+                <div class="container my-auto text-center">
+                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;"><em>THANK YOU!</em></h2>
+                    <p>Your information and message has been sent to me.</p>
+                    <h1 style="font-size: 20px;"><a href="about.html">Return to about me</a></h1>
+                    <h1 style="font-size: 20px;"><a href="index.html">Return to home</a></h1>
+                </div>
             <script src="js/jquery.min.js"></script>
             <script src="bootstrap/js/bootstrap.min.js"></script>
             <script src="js/bs-init.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-            <script src="js/stylish-portfolio.js"></script>
-            <script src="js/custom.js"></script>
         </body>
     </html>
