updates to send php

--- a/thank_you.html
+++ b/thank_you.html
@@ -15,8 +15,8 @@
                 <div class="container my-auto text-center">
                     <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;"><em>THANK YOU!</em></h2>
                     <p>Your information and message has been sent to me.</p>
-                    <h1 style="font-size: 20px;"><a href="about.html">Return to about me</a></h1>
-                    <h1 style="font-size: 20px;"><a href="index.html">Return to home</a></h1>
+                    <h1 style="font-size: 20px;"><a href="about.html">Back</a></h1>
+                    <h1 style="font-size: 20px;"><a href="index.html">Back to home</a></h1>
                 </div>
             <script src="js/jquery.min.js"></script>
             <script src="bootstrap/js/bootstrap.min.js"></script>
