--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
                             <div class="col-md-12 col-lg-6">
                                 <p style="padding-left: 15px;padding-right: 15px;">Isa Biramontes is an aspiring Wearable Technology Developer based in New York, NY. Currently attending Fabricademy in Montreal, they have a general background in fashion, textiles, coding, and interdisciplinary design.</p>
                                 <hr>
-                                <p style="padding-left: 15px;padding-right: 15px;">Isa's pronouns are they/them/she/hers</p>
+                                <p style="padding-left: 15px;padding-right: 15px;">Isa's pronouns are they/them/she/hers.</p>
                                 <hr>
-                                <p style="padding-left: 15px;padding-right: 15px;">Isa is available to work</p>
+                                <p style="padding-left: 15px;padding-right: 15px;">Isa is currently available and seeking work.</p>
                                 <hr>
                                 <div style="text-align:center"> </div>
                             </div>
