--- a/test.html
+++ b/test.html
@@ -1,6 +1,100 @@
+<!DOCTYPE html>
+    <html>
+        <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+            <title>Isa Biramontes</title>
+            <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+            <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
+            <link rel="preconnect" href="https://fonts.gstatic.com"> 
+            <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
+            
+            <link rel="stylesheet" href="css/footer.css">
+            <link rel="stylesheet" href="css/test.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+        </head>
+        <body id="page-top">
+            <div class="bar"> </div>
+            <header id="mainHeader" class="d-flex masthead" data-aos="zoom-out" data-aos-duration="1000" style="background: url(&quot;img/cover.png&quot;), #000000">
+                <div id="mainText" class="container my-auto text-center">
+                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;">ISA BIRAMONTES</em></h2>
+                    <h3 class="text-center masthead-subheading mb-0" style="color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
+                    <div class="overlay"></div>
+                </div>
+            </header>
+            <div style="background: #000000; padding-top: 10%;">
+                <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
+                    <div class="row">
+                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <div class="captions">Fabricademy </div>
+                                <!-- <?php echo "My first PHP script!";?> -->
+                                <!-- <div id="testDiv"> swag </div> -->
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer"></div>
+            <script src="js/jquery.min.js"></script>
+            <script src="bootstrap/js/bootstrap.min.js"></script>
+            <script src="js/bs-init.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+            <script src="js/stylish-portfolio.js"></script>
+            <script src="js/custom.js"></script>
+        </body>
+    </html>
+ <!-- <?php echo "My first PHP script!";?> 
 <div class="overlay_content">
     <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
 </div>
 <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
     <path fill="#D8FF33" d="M40.6,-42.1C52.4,-38.5,61.6,-25.5,66.8,-9.7C72,6,73.2,24.5,63.4,32C53.6,39.5,32.7,36,16.1,40.4C-0.5,44.7,-12.8,56.9,-18.8,53.7C-24.7,50.6,-24.3,32.2,-34,18.3C-43.6,4.3,-63.3,-5.1,-69,-19C-74.7,-32.9,-66.5,-51.1,-52.6,-54.4C-38.8,-57.8,-19.4,-46.1,-2.5,-43.2C14.4,-40.2,28.8,-45.8,40.6,-42.1Z" transform="translate(100 100)" />
-</svg>
+</svg> -->
