--- a/test.html
+++ b/test.html
@@ -23,63 +23,41 @@
                     <div class="overlay"></div>
                 </div>
             </header>
-            <div style="background: #000000; padding-top: 10%;">
-                <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
-                    <div class="row">
-                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                                <!-- <?php echo "My first PHP script!";?> -->
-                                <!-- <div id="testDiv"> swag </div> -->
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                        </div>
+            <div style="background: #000000; padding-top: 5%; padding-right: 5%; padding-left: 5%;">
+                <div class="row"> 
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
                     </div>
-                </div>
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                    </div> 
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
+                    </div>
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                    </div>
+                </div> 
             </div>
             <div class="footer"></div>
             <script src="js/jquery.min.js"></script>
@@ -97,4 +75,11 @@
 </div>
 <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
     <path fill="#D8FF33" d="M40.6,-42.1C52.4,-38.5,61.6,-25.5,66.8,-9.7C72,6,73.2,24.5,63.4,32C53.6,39.5,32.7,36,16.1,40.4C-0.5,44.7,-12.8,56.9,-18.8,53.7C-24.7,50.6,-24.3,32.2,-34,18.3C-43.6,4.3,-63.3,-5.1,-69,-19C-74.7,-32.9,-66.5,-51.1,-52.6,-54.4C-38.8,-57.8,-19.4,-46.1,-2.5,-43.2C14.4,-40.2,28.8,-45.8,40.6,-42.1Z" transform="translate(100 100)" />
-</svg> -->
+</svg> 
+
+
+
+
+
+
+-->
